feat: add review media upload and reward points
- Thêm upload ảnh/video trực tiếp cho đánh giá sản phẩm
- Giới hạn ảnh tối đa 5MB và video tối đa 50MB
- Thêm preview media trước khi gửi đánh giá
- Thêm đánh giá ẩn danh với tên hiển thị dạng rút gọn
- Bổ sung cơ chế cộng xu sau khi đánh giá được admin duyệt
- Thêm bảng lưu media đánh giá và lịch sử giao dịch xu
- Cập nhật giao diện form đánh giá hiện đại và rõ ràng hơn